--- a/P1/src/pet_adoption_error.html
+++ b/P1/src/pet_adoption_error.html
@@ -88,48 +88,47 @@
                                     <p id="outlined_error_help" class="mt-2 text-xs text-red-600"><span
                                             class="font-medium">Missing Address 1</span></p>
                                     <div class="relative">
-                                        <input type="password" id="outlined_error_pw"
-                                            aria-describedby="outlined_error_help"
+                                        <input type="text" id="outlined_error" aria-describedby="outlined_error_help"
                                             class="block px-2.5 py-2.5  w-full text-sm text-gray-900 bg-transparent rounded-lg border-1.5 appearance-none border-red-600 focus:outline-none focus:ring-0 focus:border-red-600 peer mb-4"
                                             placeholder=" " />
-                                        <!-- <label for="outlined_error_pw" class="absolute text-sm text-red-600 duration-300 transform -translate-y-4 scale-75 top-2 z-10 origin-[0] bg-white px-2 peer-focus:px-2 peer-placeholder-shown:scale-100 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:top-1/2 peer-focus:top-2 peer-focus:scale-75 peer-focus:-translate-y-4 left-1">Wrong Password</label> -->
+                                        <!-- <label for="outlined_error" class="absolute text-sm text-red-600 duration-300 transform -translate-y-4 scale-75 top-2 z-10 origin-[0] bg-white px-2 peer-focus:px-2 peer-placeholder-shown:scale-100 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:top-1/2 peer-focus:top-2 peer-focus:scale-75 peer-focus:-translate-y-4 left-1">Wrong Email</label> -->
                                     </div>
 
                                     <div class="relative">
-                                        <input type="password" id="outlined_error_pw"
-                                            aria-describedby="outlined_error_help"
+                                        <input type="text" id="outlined_error" aria-describedby="outlined_error_help"
                                             class="block px-2.5 py-2.5  w-full text-sm text-gray-900 bg-transparent rounded-lg border-1.5 appearance-none border-red-600 focus:outline-none focus:ring-0 focus:border-red-600 peer mb-4"
                                             placeholder=" " />
-                                        <!-- <label for="outlined_error_pw" class="absolute text-sm text-red-600 duration-300 transform -translate-y-4 scale-75 top-2 z-10 origin-[0] bg-white px-2 peer-focus:px-2 peer-placeholder-shown:scale-100 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:top-1/2 peer-focus:top-2 peer-focus:scale-75 peer-focus:-translate-y-4 left-1">Wrong Password</label> -->
+                                        <!-- <label for="outlined_error" class="absolute text-sm text-red-600 duration-300 transform -translate-y-4 scale-75 top-2 z-10 origin-[0] bg-white px-2 peer-focus:px-2 peer-placeholder-shown:scale-100 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:top-1/2 peer-focus:top-2 peer-focus:scale-75 peer-focus:-translate-y-4 left-1">Wrong Email</label> -->
                                     </div>
 
                                     <p id="outlined_error_help" class="mt-2 text-xs text-red-600"><span
                                             class="font-medium">Missing City</span></p>
                                     <div class="relative">
-                                        <input type="password" id="outlined_error_pw"
-                                            aria-describedby="outlined_error_help"
+                                        <input type="text" id="outlined_error" aria-describedby="outlined_error_help"
                                             class="block px-2.5 py-2.5  w-full text-sm text-gray-900 bg-transparent rounded-lg border-1.5 appearance-none border-red-600 focus:outline-none focus:ring-0 focus:border-red-600 peer mb-4"
                                             placeholder=" " />
-                                        <!-- <label for="outlined_error_pw" class="absolute text-sm text-red-600 duration-300 transform -translate-y-4 scale-75 top-2 z-10 origin-[0] bg-white px-2 peer-focus:px-2 peer-placeholder-shown:scale-100 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:top-1/2 peer-focus:top-2 peer-focus:scale-75 peer-focus:-translate-y-4 left-1">Wrong Password</label> -->
+                                        <!-- <label for="outlined_error" class="absolute text-sm text-red-600 duration-300 transform -translate-y-4 scale-75 top-2 z-10 origin-[0] bg-white px-2 peer-focus:px-2 peer-placeholder-shown:scale-100 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:top-1/2 peer-focus:top-2 peer-focus:scale-75 peer-focus:-translate-y-4 left-1">Wrong Email</label> -->
                                     </div>
                                     <div class="grid-cols-2 sm:grid md:grid-cols-1">
                                         <p id="outlined_error_help" class="mt-2 text-xs text-red-600"><span
                                                 class="font-medium">Missing Province</span></p>
                                         <div class="relative">
-                                            <input type="password" id="outlined_error_pw"
+                                            <input type="text" id="outlined_error"
                                                 aria-describedby="outlined_error_help"
                                                 class="block px-2.5 py-2.5  w-full text-sm text-gray-900 bg-transparent rounded-lg border-1.5 appearance-none border-red-600 focus:outline-none focus:ring-0 focus:border-red-600 peer mb-4"
                                                 placeholder=" " />
-                                            <!-- <label for="outlined_error_pw" class="absolute text-sm text-red-600 duration-300 transform -translate-y-4 scale-75 top-2 z-10 origin-[0] bg-white px-2 peer-focus:px-2 peer-placeholder-shown:scale-100 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:top-1/2 peer-focus:top-2 peer-focus:scale-75 peer-focus:-translate-y-4 left-1">Wrong Password</label> -->
+                                            <!-- <label for="outlined_error" class="absolute text-sm text-red-600 duration-300 transform -translate-y-4 scale-75 top-2 z-10 origin-[0] bg-white px-2 peer-focus:px-2 peer-placeholder-shown:scale-100 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:top-1/2 peer-focus:top-2 peer-focus:scale-75 peer-focus:-translate-y-4 left-1">Wrong Email</label> -->
                                         </div>
                                         <p id="outlined_error_help" class="mt-2 text-xs text-red-600"><span
                                                 class="font-medium">Missing Postal Code</span></p>
                                         <div class="relative">
-                                            <input type="password" id="outlined_error_pw"
-                                                aria-describedby="outlined_error_help"
-                                                class="block px-2.5 py-2.5  w-full text-sm text-gray-900 bg-transparent rounded-lg border-1.5 appearance-none border-red-600 focus:outline-none focus:ring-0 focus:border-red-600 peer mb-4"
-                                                placeholder=" " />
-                                            <!-- <label for="outlined_error_pw" class="absolute text-sm text-red-600 duration-300 transform -translate-y-4 scale-75 top-2 z-10 origin-[0] bg-white px-2 peer-focus:px-2 peer-placeholder-shown:scale-100 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:top-1/2 peer-focus:top-2 peer-focus:scale-75 peer-focus:-translate-y-4 left-1">Wrong Password</label> -->
+                                            <div class="relative">
+                                                <input type="text" id="outlined_error"
+                                                    aria-describedby="outlined_error_help"
+                                                    class="block px-2.5 py-2.5  w-full text-sm text-gray-900 bg-transparent rounded-lg border-1.5 appearance-none border-red-600 focus:outline-none focus:ring-0 focus:border-red-600 peer mb-4"
+                                                    placeholder=" " />
+                                                <!-- <label for="outlined_error" class="absolute text-sm text-red-600 duration-300 transform -translate-y-4 scale-75 top-2 z-10 origin-[0] bg-white px-2 peer-focus:px-2 peer-placeholder-shown:scale-100 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:top-1/2 peer-focus:top-2 peer-focus:scale-75 peer-focus:-translate-y-4 left-1">Wrong Email</label> -->
+                                            </div>
                                         </div>
                                     </div>
                                     <select id="country"
