--- a/P1/src/pet_adoption_error.html
+++ b/P1/src/pet_adoption_error.html
@@ -138,114 +138,117 @@
                                     </select>
                                 </div>
                             </div>
-                        </div>
 
 
-                        <label for="pet_ownership" class="mt-1 p-2 block font-bold text-gray-700">Do you own any
-                            pets?<span class="text-red-500">*</span></label>
-                        <div class="mb-4">
-                            <div class="justify-center mb-4">
-                                <div>
-                                    <label class="block mb-2">
-                                        <input type="radio" class="form-radio text-blue-600" name="choice" value="Yes">
-                                        <span class="ml-2">Yes</span>
-                                    </label>
+                            <label for="pet_ownership" class="mt-1 p-2 block font-bold text-gray-700">Do you own any
+                                pets?<span class="text-red-500">*</span></label>
+                            <div class="mb-4">
+                                <div class="justify-center mb-4">
+                                    <div>
+                                        <label class="block mb-2">
+                                            <input type="radio" class="form-radio text-blue-600" name="choice"
+                                                value="Yes">
+                                            <span class="ml-2">Yes</span>
+                                        </label>
 
-                                    <label class="block">
-                                        <input type="radio" class="form-radio text-red-600" name="choice" value="No">
-                                        <span class="ml-2">No</span>
-                                    </label>
+                                        <label class="block">
+                                            <input type="radio" class="form-radio text-red-600" name="choice"
+                                                value="No">
+                                            <span class="ml-2">No</span>
+                                        </label>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
 
-                        <label for="breed" class="mt-1 p-2 block font-bold text-gray-700">If yes, name the breed
-                            and age.</label>
-                        <div class="mb-4">
-                            <textarea type="" name="" id=""
-                                class="bg-white-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 mb-4 mt-2"
-                                style="height: 200px; resize: none;" placeholder="Enter Answer Here"
-                                required></textarea>
-                        </div>
-
-
-                        <label for="past_pet" class="mt-1 p-2 block font-bold text-gray-700">Have you had a pet in
-                            the
-                            past?
-                            If
-                            yes, what animal and for how long?<span class="text-red-500">*</span></label>
-                        <div class="mb-4">
+                            <label for="breed" class="mt-1 p-2 block font-bold text-gray-700">If yes, name the breed
+                                and age.</label>
                             <div class="mb-4">
                                 <textarea type="" name="" id=""
                                     class="bg-white-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 mb-4 mt-2"
                                     style="height: 200px; resize: none;" placeholder="Enter Answer Here"
                                     required></textarea>
                             </div>
-                        </div>
 
-                        <label for="pet_ownership" class="mt-1 p-2 block font-bold text-gray-700">Do you own or rent
-                            your
-                            home?<span class="text-red-500">*</span></label>
-                        <div class="mb-10">
-                            <div class="justify-center mb-4">
-                                <div>
-                                    <label class="block mb-2">
-                                        <input type="radio" class="form-radio text-blue-600" name="choice" value="own">
-                                        <span class="ml-2">Own</span>
-                                    </label>
 
-                                    <label class="block">
-                                        <input type="radio" class="form-radio text-red-600" name="choice" value="rent">
-                                        <span class="ml-2">Rent</span>
-                                    </label>
+                            <label for="past_pet" class="mt-1 p-2 block font-bold text-gray-700">Have you had a pet in
+                                the
+                                past?
+                                If
+                                yes, what animal and for how long?<span class="text-red-500">*</span></label>
+                            <div class="mb-4">
+                                <div class="mb-4">
+                                    <textarea type="" name="" id=""
+                                        class="bg-white-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 mb-4 mt-2"
+                                        style="height: 200px; resize: none;" placeholder="Enter Answer Here"
+                                        required></textarea>
                                 </div>
                             </div>
+
+                            <label for="pet_ownership" class="mt-1 p-2 block font-bold text-gray-700">Do you own or rent
+                                your
+                                home?<span class="text-red-500">*</span></label>
+                            <div class="mb-10">
+                                <div class="justify-center mb-4">
+                                    <div>
+                                        <label class="block mb-2">
+                                            <input type="radio" class="form-radio text-blue-600" name="choice"
+                                                value="own">
+                                            <span class="ml-2">Own</span>
+                                        </label>
+
+                                        <label class="block">
+                                            <input type="radio" class="form-radio text-red-600" name="choice"
+                                                value="rent">
+                                            <span class="ml-2">Rent</span>
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+
+                        <div class="flex justify-start p-2 mb-10 items-center">
+                            <input type="checkbox" class="form-checkbox text-indigo-600 mr-3">
+                            <p class="input-left-text" required>I have read and agree to the terms and conditions.</p>
+                        </div>
+
+                        <div class="flex justify-start p-2 mb-20">
+                            <ul class="list-disc ml-4">
+                                <li class="font-bold mb-4">
+                                    I agree to adopt the pet if the application is accepted, and will pay the adoption
+                                    fee
+                                    as
+                                    necessary.
+                                </li>
+                                <li class="font-bold mb-4">
+                                    I understand that there can be additional documents to complete after the
+                                    application is
+                                    submitted.
+                                </li>
+                                <li class="font-bold">
+                                    By clicking the submit button, I verify all of the above information is true and
+                                    accurate.
+                            </ul>
+                        </div>
+
+                        <div class="flex items-center mb-4">
+                            <label for="signature" class="block p-2 font-bold text-gray-700 mr-2">Signature<span
+                                    class="text-red-500">*</span></label>
+                            <input type="text" name="signature" id="signature"
+                                class="block bg-white-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5"
+                                style="width: 100%;" placeholder="Signature" required>
                         </div>
 
                     </div>
+                </form>
+                <a class="flex justify-center" href="thank_you_application.html">
 
-                    <div class="flex justify-start p-2 mb-10 items-center">
-                        <input type="checkbox" class="form-checkbox text-indigo-600 mr-3">
-                        <p class="input-left-text" required>I have read and agree to the terms and conditions.</p>
-                    </div>
-
-                    <div class="flex justify-start p-2 mb-20">
-                        <ul class="list-disc ml-4">
-                            <li class="font-bold mb-4">
-                                I agree to adopt the pet if the application is accepted, and will pay the adoption
-                                fee
-                                as
-                                necessary.
-                            </li>
-                            <li class="font-bold mb-4">
-                                I understand that there can be additional documents to complete after the
-                                application is
-                                submitted.
-                            </li>
-                            <li class="font-bold">
-                                By clicking the submit button, I verify all of the above information is true and
-                                accurate.
-                        </ul>
-                    </div>
-
-                    <div class="flex items-center mb-4">
-                        <label for="signature" class="block p-2 font-bold text-gray-700 mr-2">Signature<span
-                                class="text-red-500">*</span></label>
-                        <input type="text" name="signature" id="signature"
-                            class="block bg-white-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5"
-                            style="width: 100%;" placeholder="Signature" required>
-                    </div>
+                    <button type="button"
+                        class="text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700">Submit</button>
+                </a>
+            </section>
 
         </div>
-        </form>
-        <a class="flex justify-center" href="thank_you_application.html">
-
-            <button type="button"
-                class="text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700">Submit</button>
-        </a>
-        </section>
-
-    </div>
     </div>
     <script src="./footer_seeker.js"></script>
     </div>
