tiny change of font size

--- a/P1/src/list_seeker_applications.html
+++ b/P1/src/list_seeker_applications.html
@@ -25,8 +25,7 @@
             <div class="flex flex-col content-center   w-full md:w-3/4 lg:w-1/2">
                 <div class="flex flex-row items-center justify-between  mt-4 mb-2 ">
                     <div>
-                        <h1
-                            class="mb-4 text-2xl font-extrabold leading-none tracking-tight text-gray-900 md:text-4xl lg:text-4xl ">
+                        <h1 class="mb-4 text-2xl font-bold leading-none tracking-tight text-gray-900 md:text-3xl ">
                             Adoption Applications </h1>
                     </div>
                     <div class="flex items-center gap-2">
