--- a/P1/src/list_shelter_applications.html
+++ b/P1/src/list_shelter_applications.html
@@ -17,7 +17,6 @@
 
     <script src="nav_login_shelter.js"> </script>
 
-
     <!-- Some hacky flex boxing -->
     <div class="min-h-screen bg-gray-100 py-4">
         <div class="flex justify-center mx-4 my-4 ">
@@ -25,7 +24,7 @@
                 <div class="flex flex-row items-center justify-between  my-2 ">
                     <div>
                         <h1
-                            class="mb-4 text-2xl font-extrabold leading-none tracking-tight text-gray-900 md:text-4xl lg:text-4xl ">
+                            class="mb-4 text-2xl font-bold leading-none tracking-tight text-gray-900 md:text-3xl">
                             Adoption Applications </h1>
                     </div>
                     <div class="flex items-center gap-2">
@@ -121,7 +120,7 @@
             <div class="sm:flex sm:items-center sm:justify-between">
                 <a href="./main_after_login.html" class="flex items-center mb-4 sm:mb-0">
                     <!-- <img src="https://flowbite.com/docs/images/logo.svg" class="h-8 mr-3" alt="Flowbite Logo" /> -->
-                    <span class="self-center text-2xl font-semibold whitespace-nowrap">Pet Pal</span>
+                    <span class="self-center text-gray-600 text-2xl font-semibold whitespace-nowrap">Pet Pal</span>
                 </a>
                 <ul class="flex flex-wrap items-center mb-6 text-sm font-medium text-gray-500 sm:mb-0 ">
                     <li>
