--- a/P1/src/shelter_application.html
+++ b/P1/src/shelter_application.html
@@ -6,19 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shelter Application</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tw-elements/dist/css/tw-elements.min.css" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.1/flowbite.min.css" rel="stylesheet" />
+
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tw-elements/dist/css/tw-elements.min.css" /> -->
     <script src="https://cdn.tailwindcss.com/3.3.0"></script>
     <!-- flowbite tailwind -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.1/flowbite.min.css" rel="stylesheet" />
 </head>
 
 <body>
     <script src="./nav_login_seeker.js"></script>
-    <div class="flex flex-col justify-center items-center bg-gray-100">
+
+    <div class="flex flex-col justify-center items-center bg-gray-50 py-4">
         <div class="flex justify-center items-center p-3">
             <a href="shelter_detail_user_view.html"
                 class="relative flex justify-center text-center items-center transform transition duration-300 hover:scale-105">
-                <div class="rounded-full w-[50px] h-[50px] mr-1 mb-1">
+                <div class="rounded-full w-6 h-6 mr-2 mb-1">
                     <img src="resources/shelter/shelter_logo.png">
                 </div>
                 <h1 class="text-2xl font-bold text-gray-900 md:text-3xl lg:text-3xl">Toronto Adoption Center</h1>
@@ -34,11 +36,11 @@
             </a>
         </div>
 
-        <nav class="flex flex-col md:flex-row px-5 py-3 text-gray-700 border border-gray-200 rounded-lg bg-gray-50 dark:bg-gray-800 dark:border-gray-700 m-5"
+        <nav class="flex flex-col md:flex-row px-5 py-3 text-gray-700  rounded-lg bg-gray-50 dark:bg-gray-800 dark:border-gray-700 m-5"
             aria-label="Breadcrumb">
             <ol class="flex flex-wrap items-center space-x-1 md:space-x-3 justify-start">
                 <li class="mb-1 md:mb-0">
-                    <a href="main/main_after_login.html"
+                    <a href="./main_after_login.html"
                         class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white">
                         <svg class="w-3 h-3 mr-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
                             fill="currentColor" viewBox="0 0 20 20">
@@ -184,10 +186,11 @@
                 </section>
 
 
-
+                <!-- form application -->
                 <section id="application">
-                    <form action="https://postman-echo.com/post" class="form">
-                        <div class="bg-white border border-gray-200 p-1 rounded-lg m-4" style="max-width: 100%;">
+                    <form action="https://postman-echo.com/post" class="mb-4 m-3 shadow form">
+                        <div class="bg-white border border-gray-200 p-4 sm:p-7 rounded-lg" style="max-width: 100%;">
+                            
                             <div class="grid-cols-2 sm:grid md:grid-cols-1 gap-4">
                                 <label for="pet_name" class="mt-1 p-2 block font-bold text-gray-700">Name of Pet You
                                     Wish to
