changed error message

--- a/P1/src/seeker_signup_error.html
+++ b/P1/src/seeker_signup_error.html
@@ -62,7 +62,7 @@
                         <div class="mb-4">
                             <label for="email" class="block mb-2 text-sm font-medium text-red-500">Email address</label>
                             <input type="email" id="email" class="bg-gray-50 border border-red-500 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" placeholder="sean.song@gmail.com" required>
-                            <p id="outlined_error_help" class="mt-2 text-xs text-red-600"><span class="font-medium">This email is already in-use</span></p>    
+                            <!-- <p id="outlined_error_help" class="mt-2 text-xs text-red-600"><span class="font-medium">This email is already in-use</span></p>     -->
 
                         </div> 
                         <div class="mb-4">
@@ -72,6 +72,8 @@
                         <div class="mb-3">
                             <label for="confirm_password" class="block mb-2 text-sm font-medium text-red-500">Confirm password</label>
                             <input type="password" id="confirm_password" class="bg-gray-50 border border-red-500 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" placeholder="•••••••••" required>
+                            <p id="outlined_error_help" class="mt-2 text-xs text-red-600"><span class="font-medium">Passwords do not match.</span></p>    
+
                         </div> 
                         <div class="flex items-start mb-5">
                             <div class="flex items-center h-5">
