fixed error message

--- a/P1/src/seeker_signup.html
+++ b/P1/src/seeker_signup.html
@@ -77,11 +77,16 @@
                             </div>
                             <label for="remember" class="ml-2 text-sm font-medium text-gray-900 ">I agree with the <a href="#" class="text-blue-600 hover:underline">terms and conditions</a>.</label>
                         </div>
+
+                        <div>
+                            <a href="./seeker_signup_error.html" type="button" class="text-white mb-5 bg-blue-700 hover:bg-gray-900 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-medium w-full sm:w-full px-5 py-2.5 text-center">
+                            <!-- <button type="submit" class="text-white mb-5 bg-blue-700 hover:bg-gray-900 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-medium w-full sm:w-full px-5 py-2.5 text-center"> -->
+                                Sign Up
+                                <!-- when get rid of the a tag inside button, will not proceed to main after login -->
+                            <!-- </button> -->
+                            </a> 
+                        </div>
                         
-                        <button type="submit" class="text-white mb-5 bg-blue-700 hover:bg-gray-900 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-medium w-full sm:w-full px-5 py-2.5 text-center">
-                            <a href="./seeker_signup_error.html">Sign Up</a> 
-                            <!-- when get rid of the a tag inside button, will not proceed to main after login -->
-                        </button>
 
                         <div class="mb-2">
                             <p class="text-sm font-medium text-gray-500">
