--- a/P1/src/seeker_signup_error.html
+++ b/P1/src/seeker_signup_error.html
@@ -47,21 +47,21 @@
                         
                         <div class="grid gap-6 mb-4 md:grid-cols-2">
                             <div>
-                                <label for="first_name" class="block mb-2 text-sm font-medium text-red-500">First name</label>
-                                <input type="text" id="first_name" class="bg-gray-50 border border-red-500 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" placeholder="Sean" required>
+                                <label for="first_name" class="block mb-2 text-sm font-medium text-gray-900">First name</label>
+                                <input type="text" id="first_name" class="bg-gray-50 border border-gray-900 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" value="Sean"  required>
                             </div>
                             <div>
-                                <label for="last_name" class="block mb-2 text-sm font-medium text-red-500">Last name</label>
-                                <input type="text" id="last_name" class="bg-gray-50 border border-red-500 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" placeholder="Song" required>
+                                <label for="last_name" class="block mb-2 text-sm font-medium text-gray-900">Last name</label>
+                                <input type="text" id="last_name" class="bg-gray-50 border border-gray-900 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" value="Song" required>
                             </div>
                         </div>
                         <div class="mb-4">
-                            <label for="location" class="block mb-2 text-sm font-medium text-red-500">Location</label>
-                            <input type="location" id="location" class="bg-gray-50 border border-red-500 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" placeholder="Canada" required>
+                            <label for="location" class="block mb-2 text-sm font-medium text-gray-900">Location</label>
+                            <input type="location" id="location" class="bg-gray-50 border border-gray-900 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" value="Canada" required>
                         </div>
                         <div class="mb-4">
-                            <label for="email" class="block mb-2 text-sm font-medium text-red-500">Email address</label>
-                            <input type="email" id="email" class="bg-gray-50 border border-red-500 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" placeholder="sean.song@gmail.com" required>
+                            <label for="email" class="block mb-2 text-sm font-medium text-gray-900">Email address</label>
+                            <input type="email" id="email" class="bg-gray-50 border border-gray-900 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" value="sean.song@gmail.com" required>
                             <!-- <p id="outlined_error_help" class="mt-2 text-xs text-red-600"><span class="font-medium">This email is already in-use</span></p>     -->
 
                         </div> 
@@ -82,12 +82,34 @@
                             <label for="remember" class="ml-2 text-sm font-medium text-gray-900 ">I agree with the <a href="#" class="text-blue-600 hover:underline">terms and conditions</a>.</label>
                         </div>
                         
-                        <!-- <button type="submit" class="text-white mb-5 bg-blue-700 hover:bg-gray-900 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-medium w-full sm:w-full px-5 py-2.5 text-center"> -->
-                        <div>
-                            <a href="./main_after_login.html" type="button" class="text-white mb-5 bg-blue-700 hover:bg-gray-900 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-medium w-full sm:w-full px-5 py-2.5 text-center">Sign Up</a> 
-                        </div>
+                        <button type="button" data-modal-toggle="successModal" class="text-white mb-5 bg-blue-700 hover:bg-gray-900 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-medium w-full sm:w-full px-5 py-2.5 text-center">
+                        <!-- <div> -->
+                            Sign Up
+                            <!-- <a href="./main_after_login.html" type="button" class="text-white mb-5 bg-blue-700 hover:bg-gray-900 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-medium w-full sm:w-full px-5 py-2.5 text-center">Sign Up</a>  -->
+                        <!-- </div> -->
                             <!-- when get rid of the a tag inside button, will not proceed to main after login -->
-                        <!-- </button> -->
+                        </button>
+
+                        <div id="successModal" data-modal-placement="top-center" tabindex="-1" class="fixed top-0 left-0 right-0 z-50 hidden w-full p-4 mt-16 md:mt-8 overflow-x-hidden overflow-y-auto md:inset-0 h-[calc(100%-1rem)] max-h-full">
+                            <div class="relative w-full max-w-lg max-h-full">
+                                <!-- Modal content -->
+                                <div class="relative bg-white p-4 text-center rounded-lg shadow">
+                                    <!-- Modal body -->
+                                    <button type="button" class="text-gray-400 absolute top-2.5 right-2.5 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center" data-modal-toggle="successModal">
+                                        <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
+                                        <span class="sr-only">Close modal</span>
+                                    </button>
+                                    <div class="w-12 h-12 rounded-full bg-blue-100 p-2 flex items-center justify-center mx-auto my-3.5">
+                                        <svg aria-hidden="true" class="w-8 h-8 text-blue-500" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path></svg>
+                                        <span class="sr-only">Success</span>
+                                    </div>
+                                    <p class="mb-4 text-lg font-semibold text-gray-900">Successfully Signed Up!</p>
+                                    <button data-modal-toggle="successModal" type="button" class="py-2 px-3 text-sm font-medium text-center text-white rounded-lg bg-blue-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300">
+                                        <a href="./main_after_login.html">Continue</a>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
 
                         <div class="mb-2">
                             <p class="text-sm font-medium text-gray-500">
