minor change in layout

--- a/P1/src/pet_detail_shelter_view.html
+++ b/P1/src/pet_detail_shelter_view.html
@@ -17,7 +17,6 @@
 
     <div class="flex flex-col justify-center items-center bg-gray-50 py-3">
         <div class="flex justify-center items-center p-3">
-
             <a href="shelter_detail_user_view.html"
                 class="relative flex justify-center text-center items-center transform transition duration-300 hover:scale-105">
                 <div class="rounded-full w-6 h-6 mr-2 mb-1">
@@ -44,16 +43,6 @@
             </div>
         </div>
         <!-- edit icon -->
-        <!-- <div
-            class="bg-white rounded-full border border-gray-300 fixed hidden md:block top-10 right-0 w-[100px] m-3 p-3 z-50 shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)]">
-            <a href="./pet_detail_editable.html">
-                <svg class="w-full hover:scale-110" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                    stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-                    <path stroke-linecap="round" stroke-linejoin="round"
-                        d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L10.582 16.07a4.5 4.5 0 01-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 011.13-1.897l8.932-8.931zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0115.75 21H5.25A2.25 2.25 0 013 18.75V8.25A2.25 2.25 0 015.25 6H10" />
-                </svg>
-            </a>
-        </div> -->
         <!-- appear in phone size -->
         <div
             class="bg-white rounded-full border border-gray-300 fixed md:hidden bottom-0 right-0 w-16 m-3 p-3 z-50 shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)]">
@@ -67,23 +56,6 @@
         </div>
         <!-- end edit icon -->
 
-
-        <!-- 
-    <div class="w-full flex justify-center">
-        <div class="m-3">
-            <div class="inline-flex">
-                <div class="rounded-full w-[50px] h-[50px] mr-2 mb-1">
-                    <img src="resources/shelter/shelter_logo.png">
-                </div>
-                <a href="shelter_detail_user_view.html" class="justify-center text-center items-center"
-                    style="display: inline-block; padding: 10px 25px; background-color: #007bff; color: #fff; border: 2px solid #fff; text-decoration: none; border-radius: 10px; transition: background-color 0.3s;"
-                    onmouseover="this.style.backgroundColor = '#00008B';"
-                    onmouseout="this.style.backgroundColor = '#007bff';">
-                    Go To Shelter
-                </a>
-            </div>
-        </div>
-    </div> -->
         <!-- Pet Intro -->
         <section id="pet_gallery" class="p-2 w-5/6 sm:w-3/4 mb-3">
             <div class="w-full flex flex-col border bg-white border-gray-300 rounded-lg shadow-md md:flex-row md:max">
@@ -476,21 +448,13 @@
                 </div>
 
                 <div
-                    class="p-6 col-span-2 bg-white  shadow-lg rounded-lg">
+                    class="p-6 col-span-2 bg-white  shadow-lg rounded-lg mb-7">
                     <h2 class="mb-2 font-bold text-xl ">Additional Comments</h2>
                     <div>DunDun is an incredibly friendly and sociable dog. 
                         He eagerly greets everyone he meets with a wagging tail and a smile, making him a true people-dog!</div>
                 </div>
             </div>
 
-            <div class="flex justify-center pb-10 bg-gray-50 pt-3">
-                <a href="pet_adoption.html">
-                    <button type="button"
-                        class="m-3 text-white text-lg font-semibold bg-gray-700 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 rounded-lg text-sm px-6 py-2.5 mr-2 mb-2">
-                        Adopt
-                    </button>
-                </a>
-            </div>
         </section>
     </div>
 
